<resources>
    <string name="app_name">NotesAPI</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="user">Username:</string>
    <string name="pass">Password:</string>
    <string name="add">ADD</string>
    <string name="del">Delete</string>
    <string name="save">Save</string>
    <string name="logout">Log out</string>
    <string name="title">Title</string>
</resources>