<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="271dp"
        android:text="@string/user"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="76dp"
        android:layout_height="34dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="317dp"
        android:text="@string/register"
        android:textColor="#000000"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/txt_auth_user"
        android:layout_width="190dp"
        android:layout_height="36dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="271dp"
        android:background="@drawable/roundedit"
        android:ems="10"
        android:hint="login"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#424242"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/txt_auth_password"
        android:layout_width="190dp"
        android:layout_height="36dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="317dp"
        android:background="@drawable/roundedit"
        android:ems="10"
        android:hint="password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#424242"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/chkRemember"
        android:layout_width="77dp"
        android:layout_height="45dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="379dp"
        android:text="@string/save"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="148dp"
        android:layout_height="41dp"
        android:layout_marginStart="203dp"
        android:layout_marginTop="383dp"
        android:background="@drawable/roundbtn"
        android:onClick="onSignInClick"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="148dp"
        android:layout_height="41dp"
        android:layout_marginStart="-225dp"
        android:layout_marginTop="456dp"
        android:layout_toEndOf="@id/btn_login"
        android:background="@drawable/roundbtn"
        android:onClick="onRegisterClick"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>
